--- a/ADIN.WPF/Components/DeviceListing.xaml
+++ b/ADIN.WPF/Components/DeviceListing.xaml
@@ -29,7 +29,7 @@
                             </Grid.RowDefinitions>
                             <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="30" Height="30" Source="{Binding ImagePath}" Margin="0 0 5 0"/>
                             <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding SerialNumber}"/>
-                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Name}"/>
+                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Name}" FontSize="10"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
