--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -4,10 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ADIN.WPF.View"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Label Content="Link Properties View"/>
-        <Button Content="Reg Acc" Command="{Binding NavigateRegisterAccessCommand}"/>
+        <!--<Label Content="Link Properties View"/>
+        <Button Content="Reg Acc" Command="{Binding NavigateRegisterAccessCommand}"/>-->
+        <telerik:RadPropertyGrid>
+            
+        </telerik:RadPropertyGrid>
     </Grid>
 </UserControl>
