--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -26,14 +26,14 @@
                         </DataTemplate>
                     </telerik:PropertyDefinition.EditorTemplate>
                 </telerik:PropertyDefinition>
-                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="Advertise 1000BASE-T FD" DisplayName="Advertise 1000BASE-T FD" GroupName="Auto-Negotation Advertised Speeds" OrderIndex="1">
+                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertised1GSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="Advertise 1000BASE-T FD" DisplayName="Advertise 1000BASE-T FD" GroupName="Auto-Negotation Advertised Speeds" OrderIndex="1">
                     <telerik:PropertyDefinition.EditorTemplate>
                         <DataTemplate>
                             <CheckBox IsChecked="{Binding IsAdvertise_1000BASE_T_FD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         </DataTemplate>
                     </telerik:PropertyDefinition.EditorTemplate>
                 </telerik:PropertyDefinition>
-                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="Advertise 1000BASE-T HD" DisplayName="Advertise 1000BASE-T HD" GroupName="Auto-Negotation Advertised Speeds" OrderIndex="1">
+                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertised1GSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="Advertise 1000BASE-T HD" DisplayName="Advertise 1000BASE-T HD" GroupName="Auto-Negotation Advertised Speeds" OrderIndex="1">
                     <telerik:PropertyDefinition.EditorTemplate>
                         <DataTemplate>
                             <CheckBox IsChecked="{Binding IsAdvertise_1000BASE_T_HD}"/>
@@ -69,7 +69,7 @@
                     </telerik:PropertyDefinition.EditorTemplate>
                 </telerik:PropertyDefinition>
 
-                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="Advertise EEE 1000BASE-T" DisplayName="Advertise EEE 1000BASE-T" GroupName="EEE Advertisement" OrderIndex="2">
+                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertised1GSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="Advertise EEE 1000BASE-T" DisplayName="Advertise EEE 1000BASE-T" GroupName="EEE Advertisement" OrderIndex="2">
                     <telerik:PropertyDefinition.EditorTemplate>
                         <DataTemplate>
                             <CheckBox IsChecked="{Binding IsAdvertise_EEE_1000BASE_T}"/>
@@ -84,7 +84,7 @@
                     </telerik:PropertyDefinition.EditorTemplate>
                 </telerik:PropertyDefinition>
 
-                <telerik:PropertyDefinition Description="100BASE-TX HD" DisplayName="100BASE-TX HD" GroupName="Down Speed" OrderIndex="3">
+                <telerik:PropertyDefinition Visibility="{Binding DataContext.IsANAdvertised1GSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}" Description="100BASE-TX HD" DisplayName="100BASE-TX HD" GroupName="Down Speed" OrderIndex="3">
                     <telerik:PropertyDefinition.EditorTemplate>
                         <DataTemplate>
                             <CheckBox IsChecked="{Binding IsDownSpeed_100BASE_TX_HD}"/>
