--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -72,6 +72,17 @@
                             <!--<GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />-->
                         </Grid>
                     </TabItem>
+                    <TabItem Header="Clock Control">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" MinWidth="400"/>
+                                <ColumnDefinition Width="3"/>
+                                <ColumnDefinition Width="2*"/>
+                            </Grid.ColumnDefinitions>
+                            <local:ClockPinControlView Grid.Column="0" DataContext="{Binding ClockPinControlVM}"/>
+                            <!--<GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />-->
+                        </Grid>
+                    </TabItem>
                 </TabControl>
             </Grid>
             <!--<Grid Grid.Column="1" Grid.Row="1">
