--- a/ADIN.WPF/Themes/ButtonStyle.xaml
+++ b/ADIN.WPF/Themes/ButtonStyle.xaml
@@ -80,9 +80,60 @@
     </Style>
 
     <Style x:Key="TelerikButtonStyle" TargetType="{x:Type telerik:RadButton}" BasedOn="{StaticResource ButtonStyle}">
-        <Setter Property="Margin" Value="2.5"/>
-        <Setter Property="Height" Value="28"/>
+        <Setter Property="Margin" Value="3"/>
+        <Setter Property="Height" Value="25"/>
     </Style>
+
+    <Style x:Key="TelerikRadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}">
+        <Setter Property="Margin" Value="3"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ButtonBase}">
+                    <Border CornerRadius="8" Background="{TemplateBinding Background}" Name="button">
+                        <Grid>
+                            <Border BorderThickness="1,0,1,1" BorderBrush="Black" CornerRadius="{Binding ElementName=button, Path=CornerRadius}">
+                                <Border.Effect>
+                                    <BlurEffect Radius="2" KernelType="Gaussian"/>
+                                </Border.Effect>
+                            </Border>
+                            <Border BorderThickness="0,1,0,0" BorderBrush="White" Margin="2" Opacity="0.7" CornerRadius="{Binding ElementName=button, Path=CornerRadius}">
+                                <Border.Effect>
+                                    <BlurEffect Radius="2" KernelType="Gaussian"/>
+                                </Border.Effect>
+                            </Border>
+                            <ContentPresenter TextBlock.FontSize="{TemplateBinding FontSize}" TextBlock.FontFamily="{TemplateBinding FontFamily}" TextBlock.Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}"></ContentPresenter>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Background" Value="#002060" />
+        <Setter Property="Background" Value="{StaticResource Button.Background}" />
+        <Setter Property="Foreground" Value="{StaticResource Button.Foreground}" />
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter Property="Foreground" Value="{StaticResource Button.IsMouseOver.Foreground}"/>
+                <Setter Property="Background" Value="{StaticResource Button.IsMouseOver.Background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Button.IsMouseOver.BorderBrush}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="true">
+                <Setter Property="Foreground" Value="Black"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="{StaticResource Button.IsEnable.Foreground}"/>
+                <Setter Property="Background" Value="{StaticResource Button.IsEnable.Background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Button.IsEnable.BorderBrush}"/>
+            </Trigger>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="Foreground" Value="{StaticResource Button.IsChecked.Foreground}"/>
+                <Setter Property="Background" Value="{StaticResource Button.IsChecked.Background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Button.IsChecked.BorderBrush}"/>
+                <Setter Property="FontWeight" Value="Bold"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
 
     <Style x:Key="ToggleFlatStyle" TargetType="{x:Type telerik:RadToggleButton}">
         <Setter Property="CornerRadius" Value="8"/>
@@ -294,5 +345,8 @@
     </Style>
     <!--Frame Gen Checker-->
 
+    <Style x:Key="RadioButtonStyle" TargetType="{x:Type telerik:RadRadioButton}" BasedOn="{StaticResource TelerikRadioButtonStyle}">
+        
+    </Style>
 
 </ResourceDictionary>
