--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -169,7 +169,7 @@
                         </Grid>
                     </TabItem>
                 </TabControl>
-            </Grid>
+            </Grid>-->
             <Grid Grid.ColumnSpan="2" Grid.Row="2" Margin="0 10 0 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -177,10 +177,10 @@
                         <ColumnDefinition Width="4"/>
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
-                    <components:LogActivityView Grid.Column="0" DataContext="{Binding LogActivityViewModel}"/>
-                    <components:RegisterAccessView Grid.Column="2" DataContext="{Binding RegisterAccessViewModel}"/>
+                    <components:LogActivityView Grid.Column="0" DataContext="{Binding LogActivityVM}"/>
+                    <!--<components:RegisterAccessView Grid.Column="2" DataContext="{Binding RegisterAccessViewModel}"/>-->
                 </Grid>
-            </Grid>-->
+            </Grid>
         </Grid>
     </DockPanel>
 </UserControl>
